SERVER-19382 Don't cache OperationContext in SNMP module

GitOrigin-RevId: a8766ddd68e3fee3ca8e2972aeaaa9293adc345f